﻿[B]Changelog[/B]
Fixed: Pathe updated their layout again (Fixes #577)

[I]Previous changes[/I]
Fixed: Pathe.nl updated their site (Fixes #576)
Fixed: Dumpert (Fixes #527)